--- a/training.ipynb
+++ b/training.ipynb
@@ -9,10 +9,11 @@
     "import torch\n",
     "import matplotlib.pyplot as plt\n",
     "from dataset import TextDataset\n",
-    "from torch.utils.data import DataLoader\n",
+    "from torch.utils.data import DataLoader, RandomSampler, SequentialSampler\n",
     "from model import WordSubstitutionDetector\n",
     "from model_trainer import ModelTrainer\n",
     "from utils import create_embedding_matrix\n",
+    "from transformers import BertForTokenClassification, AdamW\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -38,47 +39,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[DATASET] Maximum line length: 100\n",
-      "[DATASET] Vocabulary size: 3030\n",
-      "[DATASET] Maximum line length: 100\n",
-      "[DATASET] Vocabulary size: 3030\n"
+      "[DATASET] Maximum line length: 200\n",
+      "[DATASET] Maximum line length: 200\n"
      ]
     }
    ],
    "source": [
     "train_dataset = TextDataset(base_path=data_dir,\n",
-    "#                             split_name='train_small',\n",
     "                            split_name='dev',\n",
-    "                            max_len=100,\n",
-    "                           freq_threshold=8)\n",
+    "                            max_len=200)\n",
+    "\n",
+    "train_sampler = RandomSampler(train_dataset)\n",
     "\n",
     "train_loader = DataLoader(train_dataset,\n",
-    "#                       batch_size=1024,\n",
-    "                          batch_size=512,\n",
-    "                      shuffle=False,\n",
-    "                      num_workers=6,\n",
-    "                      pin_memory=True,\n",
-    "                      drop_last=False,\n",
-    "                      timeout=0,\n",
-    "                      worker_init_fn=None)\n",
-    "\n",
-    "vocab = train_dataset.get_vocab()\n",
+    "                          batch_size=16,\n",
+    "                          sampler=train_sampler,\n",
+    "                          num_workers=6)\n",
     "\n",
     "\n",
     "val_dataset = TextDataset(base_path=data_dir,\n",
     "                          split_name='dev',\n",
-    "                          max_len=100,\n",
-    "                          vocab=vocab)\n",
+    "                          max_len=200)\n",
+    "\n",
+    "val_sampler = SequentialSampler(val_dataset)\n",
     "\n",
     "val_loader = DataLoader(val_dataset,\n",
-    "#                       batch_size=1024,\n",
-    "                        batch_size=512,\n",
-    "                      shuffle=False,\n",
-    "                      num_workers=6,\n",
-    "                      pin_memory=True,\n",
-    "                      drop_last=False,\n",
-    "                      timeout=0,\n",
-    "                      worker_init_fn=None)"
+    "                        batch_size=16,\n",
+    "                        sampler=val_sampler,\n",
+    "                        num_workers=6)"
    ]
   },
   {
@@ -89,7 +77,7 @@
     {
      "data": {
       "text/plain": [
-       "20"
+       "625"
       ]
      },
      "execution_count": 4,
@@ -103,55 +91,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([110, 111, 112, 113, 114, 115,   1, 116, 117,   1, 118,   1,  13,   1,\n",
-      "         12, 119,  26,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-      "          0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-      "          0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-      "          0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-      "          0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-      "          0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-      "          0,   0])\n"
+      "tensor([ 1996,  2137,  2914,  1997, 23614,  2015, 23126,  2350,  1037,  2004,\n",
+      "         1996,  3284,  1037,  2635,  2005,  2402,  4268,  1012,     0,     0,\n",
+      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0])\n",
+      "tensor([0, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0])\n",
+      "tensor([1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+      "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+      "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+      "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+      "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+      "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+      "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+      "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+      "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+      "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+      "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+      "        0., 0.], dtype=torch.float64)\n"
      ]
     }
    ],
    "source": [
     "for batch in train_loader:\n",
-    "    batch_lines, batch_labels, line_lenghts = batch\n",
+    "    batch_lines, batch_labels, batch_masks = batch\n",
     "    print(batch_lines[10])\n",
+    "    print(batch_labels[10])\n",
+    "    print(batch_masks[10])\n",
     "    break"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "word2id = train_dataset.word2id\n",
-    "\n",
-    "# pretrained_embeddings = create_embedding_matrix('../glove.6B/glove.6B.100d.txt', word2id, len(word2id), 100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -167,10 +165,49 @@
     }
    ],
    "source": [
-    "model = WordSubstitutionDetector(len(word2id),\n",
-    "                                 embedding_dim=100,\n",
-    "                                 hidden_dim=200,\n",
-    "                                 pretrained_embeddings=None).to(device)\n",
+    "# word2id = train_dataset.word2id\n",
+    "# # pretrained_embeddings = create_embedding_matrix('../glove.6B/glove.6B.100d.txt', word2id, len(word2id), 100)\n",
+    "\n",
+    "\n",
+    "# model = WordSubstitutionDetector(len(word2id),\n",
+    "#                                  embedding_dim=100,\n",
+    "#                                  hidden_dim=200,\n",
+    "#                                  pretrained_embeddings=None).to(device)\n",
+    "\n",
+    "# num_trainable_param = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
+    "# print('{} trainable parameters'.format(num_trainable_param))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model.load_state_dict(torch.load('./weights/subst_detector_0019_0.0730.pt'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "109483778 trainable parameters\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = BertForTokenClassification.from_pretrained(\n",
+    "    \"bert-base-uncased\",\n",
+    "    # 2 labels -> logits: (32, 200, 2)\n",
+    "    num_labels=2,\n",
+    "    output_attentions=False,\n",
+    "    output_hidden_states=False\n",
+    ").to(device)\n",
     "\n",
     "num_trainable_param = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
     "print('{} trainable parameters'.format(num_trainable_param))"
@@ -178,22 +215,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<All keys matched successfully>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model.load_state_dict(torch.load('./weights/subst_detector_0019_0.0730.pt'))"
+    "FULL_FINETUNING = True\n",
+    "\n",
+    "if FULL_FINETUNING:\n",
+    "    param_optimizer = list(model.named_parameters())\n",
+    "    no_decay = ['bias', 'gamma', 'beta']\n",
+    "    optimizer_grouped_parameters = [\n",
+    "        {\n",
+    "            'params': [p for n, p in param_optimizer if not any(nd in n for nd in no_decay)],\n",
+    "            'weight_decay_rate': 0.01\n",
+    "        },\n",
+    "        {\n",
+    "            'params': [p for n, p in param_optimizer if any(nd in n for nd in no_decay)],\n",
+    "            'weight_decay_rate': 0.0\n",
+    "        }\n",
+    "    ]\n",
+    "else:\n",
+    "    param_optimizer = list(model.classifier.named_parameters())\n",
+    "    optimizer_grouped_parameters = [{\"params\": [p for n, p in param_optimizer]}]\n",
+    "\n",
+    "optimizer = AdamW(\n",
+    "    optimizer_grouped_parameters,\n",
+    "    lr=3e-5,\n",
+    "    eps=1e-8\n",
+    ")"
    ]
   },
   {
@@ -202,23 +251,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "criterion = torch.nn.BCEWithLogitsLoss()\n",
-    "# optimizer = torch.optim.Adam(model.parameters(), weight_decay=1e-5)\n",
-    "optimizer = torch.optim.SGD(model.parameters(), lr=0.005, momentum=0.9)"
+    "# criterion = torch.nn.BCEWithLogitsLoss()\n",
+    "# # optimizer = torch.optim.Adam(model.parameters(), weight_decay=1e-5)\n",
+    "# optimizer = torch.optim.SGD(model.parameters(), lr=0.005, momentum=0.9)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer = ModelTrainer(model, criterion, optimizer, device)"
+    "trainer = ModelTrainer(model, None, optimizer, device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -227,91 +276,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0/19\n",
-      "Epoch 0 train loss: 0.6384\n",
-      "Epoch 0 val loss: 0.5607\n",
-      "--------------------------------------------------\n",
-      "Epoch 1/19\n",
-      "Epoch 1 train loss: 0.4906\n",
-      "Epoch 1 val loss: 0.4224\n",
-      "--------------------------------------------------\n",
-      "Epoch 2/19\n",
-      "Epoch 2 train loss: 0.3771\n",
-      "Epoch 2 val loss: 0.3344\n",
-      "--------------------------------------------------\n",
-      "Epoch 3/19\n",
-      "Epoch 3 train loss: 0.3063\n",
-      "Epoch 3 val loss: 0.2794\n",
-      "--------------------------------------------------\n",
-      "Epoch 4/19\n",
-      "Epoch 4 train loss: 0.2610\n",
-      "Epoch 4 val loss: 0.2431\n",
-      "--------------------------------------------------\n",
-      "Epoch 5/19\n",
-      "Epoch 5 train loss: 0.2304\n",
-      "Epoch 5 val loss: 0.2179\n",
-      "--------------------------------------------------\n",
-      "Epoch 6/19\n",
-      "Epoch 6 train loss: 0.2087\n",
-      "Epoch 6 val loss: 0.1995\n",
-      "--------------------------------------------------\n",
-      "Epoch 7/19\n",
-      "Epoch 7 train loss: 0.1926\n",
-      "Epoch 7 val loss: 0.1856\n",
-      "--------------------------------------------------\n",
-      "Epoch 8/19\n",
-      "Epoch 8 train loss: 0.1802\n",
-      "Epoch 8 val loss: 0.1747\n",
-      "--------------------------------------------------\n",
-      "Epoch 9/19\n",
-      "Epoch 9 train loss: 0.1705\n",
-      "Epoch 9 val loss: 0.1661\n",
-      "--------------------------------------------------\n",
-      "Epoch 10/19\n",
-      "Epoch 10 train loss: 0.1627\n",
-      "Epoch 10 val loss: 0.1591\n",
-      "--------------------------------------------------\n",
-      "Epoch 11/19\n",
-      "Epoch 11 train loss: 0.1563\n",
-      "Epoch 11 val loss: 0.1533\n",
-      "--------------------------------------------------\n",
-      "Epoch 12/19\n",
-      "Epoch 12 train loss: 0.1510\n",
-      "Epoch 12 val loss: 0.1485\n",
-      "--------------------------------------------------\n",
-      "Epoch 13/19\n",
-      "Epoch 13 train loss: 0.1465\n",
-      "Epoch 13 val loss: 0.1444\n",
-      "--------------------------------------------------\n",
-      "Epoch 14/19\n",
-      "Epoch 14 train loss: 0.1427\n",
-      "Epoch 14 val loss: 0.1409\n",
-      "--------------------------------------------------\n",
-      "Epoch 15/19\n",
-      "Epoch 15 train loss: 0.1394\n",
-      "Epoch 15 val loss: 0.1378\n",
-      "--------------------------------------------------\n",
-      "Epoch 16/19\n",
-      "Epoch 16 train loss: 0.1365\n",
-      "Epoch 16 val loss: 0.1352\n",
-      "--------------------------------------------------\n",
-      "Epoch 17/19\n",
-      "Epoch 17 train loss: 0.1340\n",
-      "Epoch 17 val loss: 0.1328\n",
-      "--------------------------------------------------\n",
-      "Epoch 18/19\n",
-      "Epoch 18 train loss: 0.1318\n",
-      "Epoch 18 val loss: 0.1307\n",
-      "--------------------------------------------------\n",
-      "Epoch 19/19\n",
-      "Epoch 19 train loss: 0.1298\n",
-      "Epoch 19 val loss: 0.1289\n",
+      "Validation Accuracy: 0.7744045\n",
+      "Precision: 0.016493766339813993\n",
+      "Recall: 0.32503556187766713\n",
+      "Validation F1-Score: 0.03139443770595623\n",
+      "Epoch 0 val loss: 0.7049\n",
       "--------------------------------------------------\n"
      ]
     }
    ],
    "source": [
-    "train_loss, val_loss = trainer.fit(train_loader, val_loader, 0, 20)"
+    "train_loss, val_loss = trainer.fit(train_loader, val_loader, 0, 1)"
    ]
   },
   {
