Weighted loss used for training

--- a/dataset-exploration.ipynb
+++ b/dataset-exploration.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import numpy as np\n",
@@ -91,6 +82,44 @@
     "#     print(len(word2id))\n",
     "\n",
     "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('./data/train_small.lbl', 'r') as f:\n",
+    "    lines = f.readlines()\n",
+    "arr = [line.rstrip().split(' ') for line in lines]\n",
+    "\n",
+    "arr_flat = []\n",
+    "for line in arr:\n",
+    "    arr_flat.extend(line)\n",
+    "    \n",
+    "arr_flat = np.array(arr_flat).astype(np.int)\n",
+    "num_replaced = np.sum((arr_flat > 0).astype(np.int))\n",
+    "num_total = len(arr_flat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "449141\n",
+      "5034349\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(num_replaced)\n",
+    "print(num_total)"
    ]
   },
   {
