--- a/training.ipynb
+++ b/training.ipynb
@@ -14,6 +14,7 @@
     "from model_trainer import ModelTrainer\n",
     "from utils import create_embedding_matrix\n",
     "from transformers import BertForTokenClassification, AdamW\n",
+    "from bert_for_token_classification_weighted import BertForTokenClassificationWeighted\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -52,7 +53,7 @@
     "train_sampler = RandomSampler(train_dataset)\n",
     "\n",
     "train_loader = DataLoader(train_dataset,\n",
-    "                          batch_size=16,\n",
+    "                          batch_size=12,\n",
     "                          sampler=train_sampler,\n",
     "                          num_workers=6)\n",
     "\n",
@@ -64,7 +65,7 @@
     "val_sampler = SequentialSampler(val_dataset)\n",
     "\n",
     "val_loader = DataLoader(val_dataset,\n",
-    "                        batch_size=16,\n",
+    "                        batch_size=12,\n",
     "                        sampler=val_sampler,\n",
     "                        num_workers=6)"
    ]
@@ -201,7 +202,7 @@
     }
    ],
    "source": [
-    "model = BertForTokenClassification.from_pretrained(\n",
+    "model = BertForTokenClassificationWeighted.from_pretrained(\n",
     "    \"bert-base-uncased\",\n",
     "    # 2 labels -> logits: (32, 200, 2)\n",
     "    num_labels=2,\n",
@@ -247,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -276,12 +277,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation Accuracy: 0.7744045\n",
-      "Precision: 0.016493766339813993\n",
-      "Recall: 0.32503556187766713\n",
-      "Validation F1-Score: 0.03139443770595623\n",
-      "Epoch 0 val loss: 0.7049\n",
-      "--------------------------------------------------\n"
+      "Epoch 0/0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/apelykh/.virtualenvs/pytorch-nlp/lib/python3.8/site-packages/transformers/optimization.py:155: UserWarning: This overload of add_ is deprecated:\n",
+      "\tadd_(Number alpha, Tensor other)\n",
+      "Consider using one of the following signatures instead:\n",
+      "\tadd_(Tensor other, *, Number alpha) (Triggered internally at  /pytorch/torch/csrc/utils/python_arg_parser.cpp:882.)\n",
+      "  exp_avg.mul_(beta1).add_(1.0 - beta1, grad)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[30/ 834] loss: 0.494\n",
+      "[60/ 834] loss: 0.268\n",
+      "[90/ 834] loss: 0.384\n"
      ]
     }
    ],
