Supporting both LSTM and BERT models in one environment (WIP)

--- a/dataset-exploration.ipynb
+++ b/dataset-exploration.ipynb
@@ -86,11 +86,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('./data/train_small.lbl', 'r') as f:\n",
+    "with open('./data/train.lbl', 'r') as f:\n",
     "    lines = f.readlines()\n",
     "arr = [line.rstrip().split(' ') for line in lines]\n",
     "\n",
@@ -105,15 +105,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "449141\n",
-      "5034349\n"
+      "9948756\n",
+      "111650187\n"
      ]
     }
    ],
