--- a/training.ipynb
+++ b/training.ipynb
@@ -9,12 +9,13 @@
     "import torch\n",
     "import matplotlib.pyplot as plt\n",
     "from dataset import TextDataset\n",
+    "from bert_dataset import BERTTextDataset\n",
     "from torch.utils.data import DataLoader, RandomSampler, SequentialSampler\n",
-    "from model import WordSubstitutionDetector\n",
+    "from models.lstm_token_classifier import LSTMTokenClassifier\n",
+    "from models.bert_for_token_classification_weighted import BertForTokenClassificationWeighted\n",
     "from model_trainer import ModelTrainer\n",
     "from utils import create_embedding_matrix\n",
-    "from transformers import BertForTokenClassification, AdamW\n",
-    "from bert_for_token_classification_weighted import BertForTokenClassificationWeighted\n",
+    "from transformers import AdamW\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -41,31 +42,48 @@
      "output_type": "stream",
      "text": [
       "[DATASET] Maximum line length: 200\n",
-      "[DATASET] Maximum line length: 200\n"
+      "[DATASET] Vocabulary size: 2572\n",
+      "[DATASET] Maximum line length: 200\n",
+      "[DATASET] Vocabulary size: 2572\n"
      ]
     }
    ],
    "source": [
+    "max_line_len = 200\n",
+    "batch_size = 512\n",
+    "\n",
+    "\n",
     "train_dataset = TextDataset(base_path=data_dir,\n",
     "                            split_name='dev',\n",
-    "                            max_len=200)\n",
+    "                            max_len=max_line_len)\n",
+    "\n",
+    "# train_dataset = BERTTextDataset(base_path=data_dir,\n",
+    "#                                 split_name='train_small',\n",
+    "#                                 max_len=max_line_len)\n",
+    "\n",
+    "vocab = train_dataset.get_vocab()\n",
     "\n",
     "train_sampler = RandomSampler(train_dataset)\n",
     "\n",
     "train_loader = DataLoader(train_dataset,\n",
-    "                          batch_size=12,\n",
+    "                          batch_size=batch_size,\n",
     "                          sampler=train_sampler,\n",
     "                          num_workers=6)\n",
     "\n",
     "\n",
     "val_dataset = TextDataset(base_path=data_dir,\n",
     "                          split_name='dev',\n",
-    "                          max_len=200)\n",
+    "                          max_len=max_line_len,\n",
+    "                          vocab=vocab)\n",
+    "\n",
+    "# val_dataset = BERTTextDataset(base_path=data_dir,\n",
+    "#                               split_name='dev',\n",
+    "#                               max_len=max_line_len)\n",
     "\n",
     "val_sampler = SequentialSampler(val_dataset)\n",
     "\n",
     "val_loader = DataLoader(val_dataset,\n",
-    "                        batch_size=12,\n",
+    "                        batch_size=batch_size,\n",
     "                        sampler=val_sampler,\n",
     "                        num_workers=6)"
    ]
@@ -78,7 +96,7 @@
     {
      "data": {
       "text/plain": [
-       "625"
+       "20"
       ]
      },
      "execution_count": 4,
@@ -92,35 +110,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([ 1996,  2137,  2914,  1997, 23614,  2015, 23126,  2350,  1037,  2004,\n",
-      "         1996,  3284,  1037,  2635,  2005,  2402,  4268,  1012,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0])\n",
-      "tensor([0, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "tensor([  85,  198, 1102,  205,    7,  205, 2446,    4,    1,   37,    1,   88,\n",
+      "          42, 2377,  234, 1005,   12, 2396,   14,   60,    1,   14,   42,  458,\n",
+      "         622,    1,   14,  165,    1,   25,   12,   25,    0,    0,    0,    0,\n",
+      "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+      "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+      "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+      "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+      "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+      "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+      "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+      "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+      "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+      "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+      "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+      "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+      "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+      "           0,    0,    0,    0,    0,    0,    0,    0])\n",
+      "tensor([0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
@@ -128,18 +143,7 @@
       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
       "        0, 0, 0, 0, 0, 0, 0, 0])\n",
-      "tensor([1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-      "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-      "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-      "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-      "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-      "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-      "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-      "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-      "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-      "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-      "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-      "        0., 0.], dtype=torch.float64)\n"
+      "tensor(32)\n"
      ]
     }
    ],
@@ -153,39 +157,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### LSTM model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "786801 trainable parameters\n"
+      "Embeddings found for 2529/2574 tokens\n",
+      "741001 trainable parameters\n"
      ]
     }
    ],
    "source": [
-    "# word2id = train_dataset.word2id\n",
-    "# # pretrained_embeddings = create_embedding_matrix('../glove.6B/glove.6B.100d.txt', word2id, len(word2id), 100)\n",
+    "word2id = train_dataset.word2id\n",
+    "pretrained_embeddings = create_embedding_matrix('../glove.6B/glove.6B.100d.txt',\n",
+    "                                                word2id,\n",
+    "                                                vocab_size=len(word2id),\n",
+    "                                                embed_dim=100)\n",
     "\n",
+    "model = LSTMTokenClassifier(len(word2id),\n",
+    "                            embedding_dim=100,\n",
+    "                            hidden_dim=200,\n",
+    "                            pretrained_embeddings=None).to(device)\n",
     "\n",
-    "# model = WordSubstitutionDetector(len(word2id),\n",
-    "#                                  embedding_dim=100,\n",
-    "#                                  hidden_dim=200,\n",
-    "#                                  pretrained_embeddings=None).to(device)\n",
-    "\n",
-    "# num_trainable_param = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
-    "# print('{} trainable parameters'.format(num_trainable_param))"
+    "num_trainable_param = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
+    "print('{} trainable parameters'.format(num_trainable_param))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# model.load_state_dict(torch.load('./weights/subst_detector_0019_0.0730.pt'))"
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### BERT model"
    ]
   },
   {
@@ -247,28 +266,45 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# criterion = torch.nn.BCEWithLogitsLoss()\n",
-    "# # optimizer = torch.optim.Adam(model.parameters(), weight_decay=1e-5)\n",
-    "# optimizer = torch.optim.SGD(model.parameters(), lr=0.005, momentum=0.9)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trainer = ModelTrainer(model, None, optimizer, device)"
+    "---"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model.load_state_dict(torch.load('./weights/subst_detector_0019_0.0730.pt'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "criterion = torch.nn.BCEWithLogitsLoss(pos_weight=torch.tensor(11.0))\n",
+    "optimizer = torch.optim.Adam(model.parameters(), weight_decay=1e-5)\n",
+    "# optimizer = torch.optim.SGD(model.parameters(), lr=0.0005, momentum=0.9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# trainer = ModelTrainer(model, None, optimizer, device)\n",
+    "trainer = ModelTrainer(model, criterion, optimizer, device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -277,32 +313,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0/0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/apelykh/.virtualenvs/pytorch-nlp/lib/python3.8/site-packages/transformers/optimization.py:155: UserWarning: This overload of add_ is deprecated:\n",
-      "\tadd_(Number alpha, Tensor other)\n",
-      "Consider using one of the following signatures instead:\n",
-      "\tadd_(Tensor other, *, Number alpha) (Triggered internally at  /pytorch/torch/csrc/utils/python_arg_parser.cpp:882.)\n",
-      "  exp_avg.mul_(beta1).add_(1.0 - beta1, grad)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[30/ 834] loss: 0.494\n",
-      "[60/ 834] loss: 0.268\n",
-      "[90/ 834] loss: 0.384\n"
+      "Epoch 0/4\n",
+      "Epoch 0 train loss: 0.5473\n",
+      "Validation Accuracy: 0.961986\n",
+      "Precision: 0.21667422412974935\n",
+      "Recall: 0.9216794509487283\n",
+      "Validation F0.5-Score: 0.25580851026744916\n",
+      "Epoch 0 val loss: 0.5443\n",
+      "--------------------------------------------------\n",
+      "Epoch 1/4\n",
+      "Epoch 1 train loss: 0.5388\n",
+      "Validation Accuracy: 0.972014\n",
+      "Precision: 0.2683795716820489\n",
+      "Recall: 0.8752523213564796\n",
+      "Validation F0.5-Score: 0.31158876415260056\n",
+      "Epoch 1 val loss: 0.5314\n",
+      "--------------------------------------------------\n",
+      "Epoch 2/4\n",
+      "Epoch 2 train loss: 0.5295\n",
+      "Validation Accuracy: 0.972471\n",
+      "Precision: 0.27337492564567223\n",
+      "Recall: 0.8864666038666846\n",
+      "Validation F0.5-Score: 0.3172590054872547\n",
+      "Epoch 2 val loss: 0.5225\n",
+      "--------------------------------------------------\n",
+      "Epoch 3/4\n",
+      "Epoch 3 train loss: 0.5203\n",
+      "Validation Accuracy: 0.9742225\n",
+      "Precision: 0.288091651700365\n",
+      "Recall: 0.8922531736419503\n",
+      "Validation F0.5-Score: 0.33321718503429165\n",
+      "Epoch 3 val loss: 0.5135\n",
+      "--------------------------------------------------\n",
+      "Epoch 4/4\n",
+      "Epoch 4 train loss: 0.5124\n",
+      "Validation Accuracy: 0.9793585\n",
+      "Precision: 0.33176228782026296\n",
+      "Recall: 0.8399049028843134\n",
+      "Validation F0.5-Score: 0.37743151444294387\n",
+      "Epoch 4 val loss: 0.5063\n",
+      "--------------------------------------------------\n"
      ]
     }
    ],
    "source": [
-    "train_loss, val_loss = trainer.fit(train_loader, val_loader, 0, 1)"
+    "train_loss, val_loss = trainer.fit(train_loader, val_loader, 0, 5)"
    ]
   },
   {
